fix: Scroll area not visible on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ h3 {
 
     /* Allow scrolling on overflow. */
     overflow-y: scroll;
-    max-height: 70vh;
+    max-height: 60vh;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
 }
